kubernetes/infrastructure/istio/gateway.yaml
# Istio gateway for ingress traffic routing
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: main-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: wildcard-mrcurls-net-tls
    hosts:
    - "*.mrcurls.net"
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*.mrcurls.net"
    tls:
      httpsRedirect: true
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: argocd-vs
  namespace: argocd
spec:
  hosts:
  - argocd.mrcurls.net
  gateways:
  - istio-system/main-gateway
  http:
  - route:
    - destination:
        host: argocd-server
        port:
          number: 80
